const mongoose = require('mongoose');

const attendanceSchema = new mongoose.Schema({
  userId:  { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
  staffId: { type: mongoose.Schema.Types.ObjectId, ref: 'Staff', required: true, index: true },
  date:    { type: Date, required: true, index: true },
  status:  { type: String, enum: ['present', 'absent', 'half_day', 'paid_leave'], default: 'present' },
  note:    { type: String, default: '' },
  overtimeHours: { type: Number, default: 0 }
}, { timestamps: true });

attendanceSchema.index({ staffId: 1, date: 1 }, { unique: true });
attendanceSchema.index({ userId: 1, date: 1 });

module.exports = mongoose.model('Attendance', attendanceSchema);
